--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "colors": "^1.4.0",
     "express": "^5.1.0",
     "express-oas-generator": "^1.0.48",
+    "mysql2": "^3.14.3",
+    "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
