--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server",
+    "start": "node --watch --env-file=.env server",
     "dev": "node --watch --env-file=.env server"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-oas-generator": "^1.0.48",
     "jsonwebtoken": "^9.0.2",
